--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,18 @@
     <string name="refresh">Refresh</string>
     <string name="action_settings">Settings</string>
     <string name="okay">Okay</string>
+    <string name="fix">Fix</string>
+    <string name="retry">Retry</string>
+    <string name="location_services">Location services </string>
+    <string name="gps_location">GPS location</string>
+    <string name="network_location">Network location</string>
+    <string name="is_not_enabled"> is not enabled</string>
+    <string name="error_determine_location">Could not determine location</string>
+    <string name="error_internet">Please check your internet connection</string>
+    <string name="error_zipcode">Invalid zipcode</string>
+
+    <string name="please_wait">Please Wait...</string>
+    <string name="loading_forecast">Loading Your Weather Forecast!</string>
 
     <string name="low">Low</string>
     <string name="high">High</string>
